updated various text.

--- a/src/MandevilleJoinery.Web/Views/Home/AboutUs.cshtml
+++ b/src/MandevilleJoinery.Web/Views/Home/AboutUs.cshtml
@@ -138,7 +138,7 @@
                             <h4>Duncan</h4>
                             <h6 class="category text-muted">Senior Wood Specialist</h6>
                             <p class="text-muted">
-                                Duncan is the backbone to Mandeville and has been turning designs into beautiful, well-oiled reality for many years.
+                                Duncan is the backbone of Mandeville and has been turning our designs into beautiful, well-oiled reality for many a year.
                             </p>
                         </div>
                     </div>
@@ -159,22 +159,6 @@
                 <div class="col-sm-6 col-md-3">
                     <div class="mdv-card">
                         <div class="mdv-card-avatar">
-                            <img class="img" src="@Url.Content("~/images/aboutus-niall.jpg")">
-                        </div>
-
-                        <div class="mdv-card-content">
-                            <h4>Niall</h4>
-                            <h6 class="category text-muted">Wood Specialist</h6>
-                            <p class="text-muted">
-                                Niall is our newest member but has settled in perfectly to team Mandeville. 
-                                When he’s not producing beautiful woodwork he’s chasing a football somewhere!
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-6 col-md-3">
-                    <div class="mdv-card">
-                        <div class="mdv-card-avatar">
                             <img class="img" src="@Url.Content("~/images/aboutus-jake.jpg")">
                         </div>
 
@@ -182,8 +166,24 @@
                             <h4>Jake</h4>
                             <h6 class="category text-muted">Wood Specialist</h6>
                             <p class="text-muted">
-                                Jake has been part of the Mandeville family since he was 17. He’s progressed from his
-                                apprenticeship to become one of our most trusted wood specialists.
+                                Jake has been part of the Mandeville family since he was 17, joining as an apprentice.
+                                He's now earned his wings, and has become one of our most respected wood specialists.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-3">
+                    <div class="mdv-card">
+                        <div class="mdv-card-avatar">
+                            <img class="img" src="@Url.Content("~/images/aboutus-niall.jpg")">
+                        </div>
+
+                        <div class="mdv-card-content">
+                            <h4>Niall</h4>
+                            <h6 class="category text-muted">Wood Specialist</h6>
+                            <p class="text-muted">
+                                Niall is the newest member to the team and has settled in perfectly. 
+                                When he’s not lovingly caressing fine, sustainably sourced timber, he’s out chasing a football somewhere.
                             </p>
                         </div>
                     </div>
@@ -198,8 +198,8 @@
                             <h4>Morgan</h4>
                             <h6 class="category text-muted">Padawan Wood Specialist</h6>
                             <p class="text-muted">
-                                Morgan is currently working through his apprenticeship with Mandeville but has already 
-                                shown great potential and we look forward to him progressing further alongside us.
+                                Morgan is currently working through his apprenticeship and already understands the Mandeville 
+                                ethos. As well as his fine wood skills, he makes a great cup of tea.
                             </p>
                         </div>
                     </div>
@@ -214,8 +214,8 @@
                             <h4>Jack</h4>
                             <h6 class="category text-muted">Wood Specialist</h6>
                             <p class="text-muted">
-                                Jack has worked alongside Mandeville for the last 5 years. His work rate is second to
-                                none and we’re always delighted with his results.
+                                Jack has worked alongside Mandeville for the last 5 years and we think of his as one of
+                                our own. He's a hard worker who takes pride in his results, as do we.
                             </p>
                         </div>
                     </div>
@@ -229,7 +229,7 @@
                         <div class="mdv-card-content">
                             <h4>Chuggy Pig</h4>
                             <h6 class="category text-muted">Team Mascot</h6>
-                            <p class="text-muted">Supporting the team and providing back up to Boots when things get ugly.</p>
+                            <p class="text-muted">Our trusty mut/lion, supporting the team and providing back up to Boots when things get ugly.</p>
                         </div>
                     </div>
                 </div>
@@ -242,7 +242,7 @@
                         <div class="mdv-card-content">
                             <h4>Boots</h4>
                             <h6 class="category text-muted">Team Mascot / Guard Dog</h6>
-                            <p class="text-muted">Keeping the workshop safe from intruders with his side kick Chuggy Pig.</p>
+                            <p class="text-muted">A canine who takes no nonsense, keeping the workshop safe from intruders with his side kick Chuggy Pig.</p>
                         </div>
                     </div>
                 </div>
