--- a/src/MandevilleJoinery.Web/Views/Home/TermsAndConditions.cshtml
+++ b/src/MandevilleJoinery.Web/Views/Home/TermsAndConditions.cshtml
@@ -5,6 +5,14 @@
     ViewData["CanonicalUrl"] = Url.Action("AboutUs", "Home");
 }
 
+@section Styles {
+    <style>
+        .well ol { counter-reset: item }
+        .well li { display: block; margin: 12px; }
+        .well li:before { content: counters(item, ".") ". "; counter-increment: item }        
+    </style>
+}
+
 <section class="mdv-page-header" style="background-image: url('/images/bg1.jpg')">
     <div class="mdv-page-header-inner">
         <div class="container">
@@ -24,7 +32,275 @@
             <div class="row">
                 <div class="col-sm-8 col-sm-offset-2">
                     <p class="text-center">
-                        Yada yada yada.
+                        <strong>
+                            STANDARD TERMS AND CONDITIONS FOR SUPPLY OF SERVICES &amp; SALE OF GOODS
+                            THE TERMS AND CONDITIONS BELOW SHALL APPLY TO THE PROPOSAL GIVEN OVERLEAF
+                        </strong>
+                        <br />OR<br />
+                        <strong>
+                            ATTACHED AND ANY SUBSEQUENT CONTRACT BETWEEN US FOR THE SUPPLY OF THE
+                            SERVICES DETAILED IN THIS PROPOSAL. PLEASE READ CAREFULLY.
+                        </strong>
+                    </p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-8 col-sm-offset-2">
+                    <p class="text-center">
+                        <ol>
+                            <li>
+                                Formation of a Contract
+                                <ol>
+                                    <li>
+                                        The quotation given on or attached to these terms and conditions 
+                                        will only remain valid for a period of 21 days.
+                                    </li>
+                                    <li>
+                                        Acknowledgment and acceptance of this proposal is made by you placing an order within
+                                        the specified period in paragraph 1.1 above, at which time you will be bound by these terms
+                                        and conditions.
+                                        <br />
+                                        You have a seven day “cooling off” period during which time you may cancel the order (this
+                                        cancellation must be in writing).
+                                        <br />
+                                        Each proposal accepted shall constitute an individual legally binding contract between you and
+                                        us. Such contract is hereinafter referred to in these terms and conditions as &quot;an order&quot;.
+                                    </li>
+                                    <li>
+                                        No addition, alteration, substitution or waiver of these terms and conditions will be valid
+                                        unless expressly accepted in writing by us or a person authorised to sign on our behalf.
+                                    </li>
+                                    <li>
+                                        Nothing in these terms and conditions shall prejudice any condition or warranty expressed
+                                        or implied, or any legal remedy to which we may be entitled in relation to the goods / and or
+                                        the work the subject of this order.
+                                    </li>
+                                </ol>
+                            </li>
+                            <li>
+                                Specification
+                                <br /><br />
+                                All goods supplied by us shall be in accordance with the quotation given and any subsequent
+                                specifications or descriptions agreed in writing or expressly listed or set out on the face of the
+                                order.
+                            </li>
+                            <li>
+                                Our Responsibility
+                                <ol>
+                                    <li>
+                                        We will ensure that all materials supplied comply with safe building practices and that any work
+                                        carried out is carried out with reasonable care and skill and to a reasonable standard.
+                                    </li>
+                                    <li>
+                                        Before starting any work we will carry out an inspection to make sure that all work quoted
+                                        is appropriate and practicable. In the event that we are unable to carry out an inspection and this is
+                                        carried out by the customer then responsibility for any discrepancies lies with the customer.
+                                    </li>
+                                    <li>
+                                        If after our inspection any further work is necessary either because of alterations in
+                                        design, specification or otherwise and this causes an increase in costs we will send you a
+                                        further proposal giving details of the extra costs and will only proceed with the works once
+                                        your written acceptance has been received.
+                                    </li>
+                                    <li>
+                                        Subject to paragraphs 3.2 and 3.3 we will carry out the work in accordance with our
+                                        proposal.
+                                    </li>
+                                    <li>
+                                        We will make good any unnecessary damage caused whilst carrying out the work.
+                                    </li>
+                                </ol>
+                            </li>
+                            <li>
+                                Your Responsibility
+                                <ol>
+                                    <li>
+                                        You will permit us during normal working hours to carry out an inspection and thereafter
+                                        to undertake the works according to the programme set out in the proposal.
+                                    </li>
+                                    <li>
+                                        You will remove all items necessary to allow us to commence the works and cover and
+                                        protect all fixtures and fittings, which cannot be removed.
+                                    </li>
+                                    <li>
+                                        You will obtain all permissions and consents, (including if necessary planning permission)
+                                        from landlords, local authorities and others, which are required before the work can
+                                        commence.
+                                    </li>
+                                    <li>
+                                        Where you are required to provide us with measurements or other information such
+                                        measurements or information must be correct. If we rely on the measurements or information
+                                        given when preparing our proposal and such measurements or information are incorrect we
+                                        reserve the right to increase the price to make good any errors or additional works required as
+                                        a result.
+                                    </li>
+                                </ol>
+                            </li>
+                            <li>
+                                Type(s) of Work Undertaken
+                                <br /><br />
+                                We specifically do not carry out the following type(s) of work for the Customer: (However in some
+                                circumstances we may employ qualified contractors to carry out the work on our behalf.)
+                                <br /><br />
+                                Electrical<br />
+                                Plumbing<br />
+                                Masonry
+                            </li>
+                            <li>
+                                Deposit
+                                <ol>
+                                    <li>
+                                        On acceptance of the proposal in accordance with paragraph 1.2 the deposit specified in
+                                        the proposal shall be payable. The balance of the order price will be due upon satisfactory
+                                        completion of the work.
+                                    </li>
+                                    <li>
+                                        Should you cancel your order after the period specified in condition 10 below your deposit
+                                        may not be repayable.
+                                    </li>
+                                </ol>
+                            </li>
+                            <li>
+                                Title and Payment
+                                <ol>
+                                    <li>
+                                        We warrant that we have good title to the goods and will transfer such title as we have in
+                                        the goods to you pursuant to paragraph 7.3 below.
+                                    </li>
+                                    <li>
+                                        Unless otherwise stated in the order, payment of the price of the goods comprised in each
+                                        order shall become due within 10 days of date of invoice.
+                                    </li>
+                                    <li>
+                                        We will charge daily interest on late payment of the amounts due, at a rate of 8% per
+                                        annum above the then base lending rate at Bank of England from the date the payment was
+                                        due until actual date of payment.
+                                    </li>
+                                    <li>
+                                        Title to the goods comprised in the order shall not pass to you until you have paid the full
+                                        price, although we reserve the right to sue for the price once payment becomes due
+                                        notwithstanding that title may not have passed.
+                                    </li>
+                                </ol>
+                            </li>
+                            <li>
+                                Price
+                                <ol>
+                                    <li>
+                                        If the rate of value added tax (VAT) increases between the date of your order and the
+                                        date of delivery we will add the necessary additional amount of value added tax to the price of
+                                        the goods.
+                                    </li>
+                                    <li>
+                                        If the price of the goods increases for any other reason between the date of your order
+                                        and the date of delivery we will notify you of this and give you the choice of accepting the
+                                        price increase or cancelling the order in which case any deposit paid by you will be refunded in
+                                        full.
+                                    </li>
+                                </ol>
+                            </li>
+                            <li>
+                                Damage in Transit
+                                <br /><br />
+                                We will replace free of charge any goods proved to our satisfaction to have been damaged in
+                                transit provided that such damage is notified to us or the carriers in writing within 7 days of
+                                delivery.
+                            </li>
+                            <li>
+                                Cancellations
+                                <ol>
+                                    <li>
+                                        If you change your mind you may cancel your order by notifying us in writing within 7
+                                        days at the address below and we will refund your deposit in full (unless the order was
+                                        specified as urgent and work was to commence as soon as possible - in which case you may
+                                        not be entitled to a refund of deposit).
+                                    </li>
+                                    <li>
+                                        If you fail to cancel your order within the time period specified in paragraph 10.1 above
+                                        your deposit will not be returnable.
+                                    </li>
+                                </ol>
+                            </li>
+                            <li>
+                                Force Majeure
+                                <ol>
+                                    <li>
+                                        We shall not be liable for delay or failure to perform any of our obligations under this
+                                        order if the delay or failure is caused by any circumstances beyond our reasonable control.
+                                    </li>
+                                    <li>
+                                        For the purposes of this condition, &quot;force majeure&quot; shall include, but not be limited to
+                                        acts of God, war, terrorism, civil disorder, industrial dispute, fire or explosions.
+                                    </li>
+                                    <li>
+                                        Upon the happening of a &quot;force majeure&quot; event we shall be entitled to a reasonable
+                                        extension of time for the performance of our obligations.
+                                    </li>
+                                </ol>
+                            </li>
+                            <li>
+                                Guarantees
+                                <br /><br />
+                                We grant the following guarantee;
+                                <br /><br />
+                                We guarantee Mandeville Joinery Ltd’s workmanship for 2 years. This guarantee shall not apply when:
+                                <br /><br />
+                                Reasonable care and maintenance has not been adhered to or our recommendations for
+                                care and maintenance have not been followed.
+                                <br /><br />
+                                Alterations have been made to our products/workmanship by any other party than
+                                Mandeville Joinery.
+                                <br /><br />
+                                Any fault in the product is a direct result of its design when the
+                                design/specification/order was not carried out by Mandeville Joinery.
+                            </li>
+                            <li>
+                                Exclusions
+                                <ol>
+                                    <li>
+                                        We do not exclude liability for death or personal injury, however we shall not be liable for
+                                        any direct loss or damage suffered by you howsoever caused, as a result of any negligence,
+                                        breach of contract, misrepresentation or otherwise in excess of £20,000, Twenty Thousand
+                                        Pounds.
+                                    </li>
+                                    <li>
+                                        We shall not under any circumstances be liable for any indirect or consequential loss
+                                        howsoever caused whether by negligence, breach of contract, misrepresentation or otherwise.
+                                    </li>
+                                    <li>
+                                        We or our insurers shall not be liable or investigate any claim for loss unless you have
+                                        given written notice to us within 21 days of its occurrence and given us or our insurers every
+                                        facility to investigate such occurrence.
+                                    </li>
+                                </ol>
+                            </li>
+                            <li>
+                                Complaints
+                                <br /><br />
+                                We aim to provide a high level of service. If you do have an enquiry or complaint regarding
+                                the goods provided by us please address them to;
+                                <br /><br />
+                                Mandeville Joinery Ltd,
+                                <br />
+                                Unit 4 Townsend Farm Buildings,
+                                <br />
+                                Melbury Osmond,
+                                <br />
+                                Dorchester,
+                                <br />
+                                Dorset,
+                                <br />
+                                DT2 0LP.
+                            </li>
+                            <li>
+                                Jurisdiction
+                                <br /><br />
+                                If any part of these terms and conditions are found to be unlawful it shall not affect the
+                                validity or enforceability of the remaining clauses. These terms and conditions shall be
+                                construed in accordance with the laws of England and shall be subject to the exclusive
+                                jurisdiction of the English courts.
+                            </li>
+                        </ol>
                     </p>
                 </div>
             </div>
