updated wording on about us.

--- a/src/MandevilleJoinery.Web/Views/Home/AboutUs.cshtml
+++ b/src/MandevilleJoinery.Web/Views/Home/AboutUs.cshtml
@@ -166,8 +166,8 @@
                             <h4>Jake</h4>
                             <h6 class="category text-muted">Wood Specialist</h6>
                             <p class="text-muted">
-                                Jake has been part of the Mandeville family since he was 17, joining as an apprentice.
-                                He's now earned his wings, and has become one of our most respected wood specialists.
+                                Jake joined the Mandeville family as an apprentice at the age of 17.
+                                He's now earned his wings, and wants nothing other than to make our customer's lumber dreams come true.
                             </p>
                         </div>
                     </div>
@@ -214,7 +214,7 @@
                             <h4>Jack</h4>
                             <h6 class="category text-muted">Wood Specialist</h6>
                             <p class="text-muted">
-                                Jack has worked alongside Mandeville for the last 5 years and we think of his as one of
+                                Jack has worked alongside Mandeville for the last 5 years and we think of him as one of
                                 our own. He's a hard worker who takes pride in his results, as do we.
                             </p>
                         </div>
