Updated wording of about us.

--- a/src/MandevilleJoinery.Web/Views/Home/AboutUs.cshtml
+++ b/src/MandevilleJoinery.Web/Views/Home/AboutUs.cshtml
@@ -182,7 +182,7 @@
                             <h4>Niall</h4>
                             <h6 class="category text-muted">Wood Specialist</h6>
                             <p class="text-muted">
-                                Niall is the newest member to the team and has settled in perfectly. 
+                                Niall is the newest member to the team yet is already part of the furniture. 
                                 When he’s not lovingly caressing fine, sustainably sourced timber, he’s out chasing a football somewhere.
                             </p>
                         </div>
