updated various following final requests from mandeville.

--- a/src/MandevilleJoinery.Web/Views/Home/AboutUs.cshtml
+++ b/src/MandevilleJoinery.Web/Views/Home/AboutUs.cshtml
@@ -229,7 +229,7 @@
                         <div class="mdv-card-content">
                             <h4>Chuggy Pig</h4>
                             <h6 class="category text-muted">Team Mascot</h6>
-                            <p class="text-muted">Our trusty mut/lion, supporting the team and providing back up to Boots when things get ugly.</p>
+                            <p class="text-muted">Our trusty beast, supporting the team and providing back up to Boots when things get ugly.</p>
                         </div>
                     </div>
                 </div>
