--- a/src/MandevilleJoinery.Web/Views/Home/Gallery.cshtml
+++ b/src/MandevilleJoinery.Web/Views/Home/Gallery.cshtml
@@ -59,7 +59,7 @@
             </div>
             <div class="row">
                 <div class="col-sm-8 col-sm-offset-2">
-                    <div id="fotorama" data-nav="thumbs" data-width="100%">
+                    <div id="fotorama" data-nav="thumbs" data-maxHeight="85%" data-width="100%">
                         
                     </div>
                 </div>
